# figcone

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/workflows/: build_and_test.yml  release.yml  version_check.yml
cmake/: figconeConfig.cmake.in
examples/: CMakeLists.txt  demo.h  demo.ini  demo.json  demo.shoal  demo.toml  demo.xml  demo.yaml  demo_all.cpp  demo_ini.cpp  demo_json.cpp  demo_json_root_list.cpp  demo_parser.cpp  demo_root_list.json  demo_root_list.yaml  demo_shoal.cpp  demo_toml.cpp  demo_xml.cpp  demo_yaml.cpp  demo_yaml_root_list.cpp  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp  print_demo.h  yaml_impl.cpp
examples_static_refl/: CMakeLists.txt  ex01_static_refl.cpp  ex02_static_refl.cpp  ex03_static_refl.cpp  ex04_static_refl.cpp  ex05_static_refl.cpp
formats/: CMakeLists.txt
functional_tests/: lunchtoast.cfg  paths_to_filename.sh
functional_tests/error_dir_instead_of_file/: test.toast
functional_tests/error_nonexistent_file/: test.toast
functional_tests/example_1/: test.toast
functional_tests/example_1_static_refl/: test.toast
functional_tests/example_2/: test.toast
functional_tests/example_2_static_refl/: test.toast
functional_tests/example_3/: test.toast
functional_tests/example_3_static_refl/: test.toast
functional_tests/example_4/: test.toast
functional_tests/example_4_static_refl/: test.toast
functional_tests/test_ini/: test.toast
functional_tests/test_ini_static_refl/: test.toast
functional_tests/test_json/: test.toast
functional_tests/test_json_static_refl/: test.toast
functional_tests/test_shoal/: test.toast
functional_tests/test_shoal_static_refl/: test.toast
functional_tests/test_toml/: test.toast
functional_tests/test_toml_static_refl/: test.toast
functional_tests/test_xml/: test.toast
functional_tests/test_xml_static_refl/: test.toast
functional_tests/test_yaml/: test.toast
functional_tests/test_yaml_static_refl/: test.toast
include/figcone/: config.h  configmacros.h  configreader.h  errors.h  figcone.h  nameformat.h  postprocessor.h  shortmacros.h  stringconverter.h  unknown_data.h  unregisteredfieldhandler.h
include/figcone/detail/: configmacros.h  configreaderaccess.h  configreaderptr.h  configreaderstorage.h  creatormode.h  dict.h  dictcreator.h  fieldtraits.h  figcone_ini_import.h  figcone_json_import.h  figcone_shoal_import.h  figcone_toml_import.h  figcone_xml_import.h  figcone_yaml_import.h  gsl_assert.h  iconfig.h  iconfigentity.h  iconfigreader.h  initializedoptional.h  inode.h  iparam.h  ivalidator.h  loadingerror.h  nameconverter.h  nameof_import.h  nameutils.h  node.h  nodecreator.h  nodelist.h  nodelistcreator.h  optionalconfigfield.h  param.h  paramcreator.h  paramlist.h  paramlistcreator.h  paramvaluefromstring.h  string_utils.h  stringconverter.h  unregisteredfieldutils.h  utils.h  (+1 more)
release_pack/: CMakeLists.txt  release.sh
release_pack/figcone_deps/: CMakeLists.txt
release_pack/figcone_formats_deps/: CMakeLists.txt
release_pack/formats/: CMakeLists.txt
tests/: CMakeLists.txt  assert_exception.h  test_copynodelist.cpp  test_defaultunregisteredfieldhandler.cpp  test_dict.cpp  test_nameformat.cpp  test_node.cpp  test_nodelist.cpp  test_param.cpp  test_paramlist.cpp  test_postprocessor.cpp  test_unregisteredfieldhandler.cpp
tests_cpp20/: CMakeLists.txt  test_copynodelist_cpp20.cpp  test_dict_cpp20.cpp  test_node_cpp20.cpp  test_param_cpp20.cpp
tests_static_refl/: CMakeLists.txt  assert_exception.h  test_nodelist_cpp20.cpp  test_paramlist_cpp20.cpp
